crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__edge_case_reminder_only_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [],
  "source_text": "({T}: Add {R}.)",
  "card_name": "Mountain"
}
