crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__student_of_warfare_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 3
        },
        {
          "type": "SetToughness",
          "value": 3
        },
        {
          "type": "AddKeyword",
          "keyword": "FirstStrike"
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 2,
        "maximum": 6
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 2-6 / 3/3 / First strike"
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "SetPower",
          "value": 4
        },
        {
          "type": "SetToughness",
          "value": 4
        },
        {
          "type": "AddKeyword",
          "keyword": "DoubleStrike"
        }
      ],
      "condition": {
        "type": "HasCounters",
        "counters": {
          "type": "OfType",
          "data": "level"
        },
        "minimum": 7
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "LEVEL 7+ / 4/4 / Double strike"
    }
  ],
  "replacements": [],
  "extractedKeywords": [
    {
      "LevelUp": {
        "type": "Cost",
        "shards": [
          "White"
        ],
        "generic": 0
      }
    }
  ]
}
