crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__tarmogoyf_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredStatic": {
        "mode": "Continuous",
        "affected": {
          "type": "SelfRef"
        },
        "modifications": [
          {
            "type": "SetDynamicPower",
            "value": {
              "type": "Ref",
              "qty": {
                "type": "DistinctCardTypes",
                "source": {
                  "type": "Zone",
                  "zone": "Graveyard",
                  "scope": "All"
                }
              }
            }
          },
          {
            "type": "SetDynamicToughness",
            "value": {
              "type": "Offset",
              "inner": {
                "type": "Ref",
                "qty": {
                  "type": "DistinctCardTypes",
                  "source": {
                    "type": "Zone",
                    "zone": "Graveyard",
                    "scope": "All"
                  }
                }
              },
              "offset": 1
            }
          }
        ],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": true,
        "description": "~'s power is equal to the number of card types among cards in all graveyards and its toughness is equal to that number plus 1."
      }
    }
  ],
  "source_text": "Tarmogoyf's power is equal to the number of card types among cards in all graveyards and its toughness is equal to that number plus 1.",
  "card_name": "Tarmogoyf"
}
